# storage/api-docs/api-docs.json
@@ -2081,6 +2081,39 @@
                 }
             }
         },
+        "/telephony/api/cucm/user/{username}": {
+            "get": {
+                "tags": [
+                    "Management - CUCM"
+                ],
+                "summary": "Get User by Username",
+                "description": "",
+                "operationId": "getUser",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "username",
+                        "in": "path",
+                        "description": "Username",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthorized user"
+                    }
+                }
+            }
+        },
         "/telephony/api/cucmris/getphone/ip/{name}": {
             "get": {
                 "tags": [
